disable travis build success email
disable travis build success email

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
   - ./scripts/travis/build.sh
 notifications:
   email:
-    on_success: always
+    on_success: never
     on_failure: always
